# charmonium.holdem

./: .bumpversion.cfg  LICENSE.txt  README.rst  Source.gv  TODO.md  mypy.ini  pyproject.toml
charmonium/holdem/: __init__.py  _cli.py  _lib.py
docs/: conf.py  contributing.rst  installation.rst
scripts/: test.sh
tests/: test_lib.py
